Fixed #32 layout issue

--- a/themes/jo-black/assets/css/default-480px.css
+++ b/themes/jo-black/assets/css/default-480px.css
@@ -57,8 +57,11 @@
     #resume #photo {
         position: static;
     }
+    dt{
+        max-width: 140px;
+    }
     dd {
-        margin-left: 120px;
+        margin-left: 150px;
     }
     /* 3 FOOTER */
     .footer{
